Alterando tamanho texto msg

--- a/app/pages/message-body/message-body.scss
+++ b/app/pages/message-body/message-body.scss
@@ -13,15 +13,15 @@
   .card-title {
       position: absolute;
       top: 25%;
-      font-size: 2.0em;
+      font-size: 2.4em;
       width: 100%;
       font-weight: bold;
       color: #fff;
     }
 
     .card-subtitle {
-      font-size: 1.0em;
-
+      font-size: 1.1em;
+      font-weight: bold;
       position: absolute;
       top: 45%;
       width: 100%;
