Adicionado sombras ao texto da mensagem

--- a/app/pages/message-body/message-body.scss
+++ b/app/pages/message-body/message-body.scss
@@ -17,6 +17,7 @@
       width: 100%;
       font-weight: bold;
       color: #fff;
+      text-shadow: black 0.1em 0.1em 0.2em
     }
 
     .card-subtitle {
@@ -26,5 +27,6 @@
       top: 45%;
       width: 100%;
       color: #fff;
+      text-shadow: black 0.1em 0.1em 0.2em  
     }
 }
