Melhorias no visual

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -11,5 +11,6 @@
 @import "../pages/login/login";
 @import "../pages/mapa/mapa";
 @import "../pages/messages-new/messages-new";
+@import "../pages/messages-read/messages-read";
 @import "../pages/rotas/rotas";
 @import "../pages/message-body/message-body"
