--- a/app/pages/messages-read/messages-read.scss
+++ b/app/pages/messages-read/messages-read.scss
@@ -1,3 +1,13 @@
 .messages-read {
+}
 
+.address {
+  text-align: center;
+  height:50px;
+  background: #5096E5;
+  color: white;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
