--- a/app/pages/login/login.scss
+++ b/app/pages/login/login.scss
@@ -1,9 +1,32 @@
 .login {
-
+  background: #FAAC58;
 }
 
+.box-login {
+  position: absolute;
+  background: white;
+  width: 90%;
+  height: 25%;
+  border-radius: 10px;
+  left: 5%;
+  top: 30%;
+}
+
+.box-login img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  top: -25px;
+}
+
+.box-login h1 {
+  text-align: center;
+}
+
+
 .btn-face {
-  position: fixed;
-  top: 40%;
+  // position: relative;
+  // top: 60%;
+  left: 5%;
   width: 90%;
 }
